# django-rest-framework-digestauth

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  testsettings.py  tox.ini
.github/: CODEOWNERS
rest_framework_digestauth/: authentication.py  backends.py  models.py  tests.py  utils.py
rest_framework_digestauth/migrations/: 0001_initial.py
test/: conftest.py  test_auth.py
test/test_app/: settings.py  urls.py  views.py
